# pg_lake

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .typos.toml  COMMIT_MSG.md  INFINITY_FIX_SUMMARY.md  Makefile  Pipfile  README.md  avro.patch  pytest.ini  shared.mk  test_infinity_fix.sql
.github/: repo_meta.yaml
docker/: .env  Dockerfile  README.md  docker-compose.yml
docs/: README.md  building-from-source.md  data-lake-import-export.md  dbt.md  file-formats-reference.md  iceberg-tables.md  query-data-lake-files.md  spatial.md  use-case-log-management.md
duckdb_pglake/: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
duckdb_pglake/docs/: README.md
duckdb_pglake/patches/duckdb-azure/: writes.patch
duckdb_pglake/patches/duckdb-postgres/: snapshot.patch
duckdb_pglake/src/: duckdb_pglake_extension.cpp  utility_functions.cpp
duckdb_pglake/src/fs/: caching_file_system.cpp  file_cache_manager.cpp  file_utils.cpp  functions.cpp  httpfs_extended.cpp  pg_lake_s3fs.cpp  region_aware_s3fs.cpp
duckdb_pglake/src/include/: duckdb_pglake_extension.hpp
duckdb_pglake/src/include/pg_lake/: query_listener.hpp  utility_functions.hpp
duckdb_pglake/src/include/pg_lake/fs/: caching_file_system.hpp  file_cache_manager.hpp  file_utils.hpp  functions.hpp  httpfs_extended.hpp  pg_lake_s3fs.hpp  region_aware_s3fs.hpp
duckdb_pglake/src/include/pg_lake/utils/: pgduck_log_utils.h
duckdb_pglake/test/python/: duckdb_pglake_test.py
engineering-notes/: pgduck_shippability.md  writes.md
pg_extension_base/: Makefile  README.md  pg_extension_base--1.5--1.6.sql  pg_extension_base--1.6.sql  pg_extension_base.control
pg_extension_updater/: Makefile  README.md  pg_extension_updater--1.0--1.1.sql  pg_extension_updater--1.1.sql  pg_extension_updater.control
pg_lake/: Makefile  pg_lake--2.4--3.0.sql  pg_lake--3.0.sql  pg_lake.control
pg_lake_benchmark/: Makefile  README.md  pg_lake_benchmark--3.0.sql  pg_lake_benchmark.control
pg_lake_copy/: Makefile  pg_lake_copy--2.4--3.0.sql  pg_lake_copy.control
pg_lake_engine/: Makefile  pg_lake_engine--2.4--3.0.sql  pg_lake_engine--3.0.sql  pg_lake_engine.control
(+678 files in other folders)
